--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             left: 0;
             width: 100%;
             z-index: 10;
-            font-size: 45px;
+            font-size: 55px;
         }
         nav a {
             float: left;
             display: block;
             color: white;
             text-align: center;
-            padding: 14px 20px;
+            padding: 0px 25px 10px;
             text-decoration: none;
             border-right: 1px solid white; /* Separatore tra i link */
         }
@@ -52,8 +52,7 @@
         }
 
         nav a:hover {
-            background-color: #ddd;
-            color: black;
+            background-color: #6c6a6a;
         }
 
         /* Stili per lo scorrimento delle img */
@@ -87,6 +86,8 @@
         .modal-content {
             background-color: #fdfdfdce;
             margin: 15% auto;
+            margin-top: 0%;
+            top: 15%;
             padding: 20px;
             border: 1px solid #888;
             width: 80%;
